--- a/src/main/webapp/pages/app/mainpage.xhtml
+++ b/src/main/webapp/pages/app/mainpage.xhtml
@@ -4,22 +4,28 @@
 	xmlns:f="http://java.sun.com/jsf/core"
 	xmlns:ui="http://java.sun.com/jsf/facelets"
 	xmlns:p="http://primefaces.org/ui"
+	xmlns:sec="http://www.springframework.org/security/tags"
 	template="/WEB-INF/template/template.xhtml">
 
 	<f:metadata>
 		<f:viewAction type="preRenderView" action="#{server.pageEntryWorks()}"
 			onPostBack="true" />
 		<f:viewAction type="preRenderView"
-			action="#{mainPageController.startUpChecks()}"
-			onPostBack="true" />
+			action="#{mainPageController.startUpChecks()}" onPostBack="true" />
 	</f:metadata>
 
 	<ui:define name="page-title">
 		#{word['mainPage']}
 	</ui:define>
 
+	<ui:define name="breadCrumbs">
+		<li class="">#{word['mainPage']}</li>
+	</ui:define>
+
 	<ui:define name="head-end">
 		<ui:param name="renderBreadCrumb" value="false" />
+		<link rel="stylesheet"
+			href="https://fonts.googleapis.com/icon?family=Material+Icons" />
 	</ui:define>
 
 	<ui:define name="title">
@@ -27,6 +33,151 @@
 	</ui:define>
 
 	<ui:define name="body">
-		sadadasdad
+		<style type="text/css">
+#formID>.logo {
+	width: 5%
+}
+
+#formID>.detail {
+	width: 95%;
+	padding-left: 25px;
+}
+
+#formID>.detail td {
+	font-size: 24px;
+}
+
+#formID>.ui-datascroller .ui-datascroller-item {
+	border-bottom: 1px solid #A8A8A8;
+	/* with the exported variables from Nova and Luna Themes*/
+	border-bottom-color: var(- -input-border-color, #A8A8A8);
+	/* */
+	background: white;
+	margin: 10px;
+	border-radius: 9px;
+}
+
+#formID .ui-datascroller .ui-datascroller-item {
+	width: 31%;
+	display: inline-block;
+}
+
+#formID .ui-datascroller .ui-datascroller-list {
+	text-align: center;
+}
+
+.gradient {
+	background: rgb(26, 36, 142);
+	background: linear-gradient(90deg, rgba(26, 36, 142, 1) 0%,
+		rgba(0, 11, 130, 1) 49%, rgba(0, 42, 145, 1) 60%, rgba(0, 56, 154, 1)
+		64%, rgba(0, 80, 169, 1) 75%, rgba(0, 105, 183, 1) 85%,
+		rgba(0, 115, 189, 1) 89%, rgba(1, 116, 190, 1) 90%,
+		rgba(1, 144, 207, 1) 100%);
+}
+
+#formID\:devices .gradient button {
+	background: none;
+	border: none;
+	margin-right: 0px;
+}
+
+#formID\:devices .gradient button.ui-button {
+	padding: 0px 12px;
+}
+</style>
+		<h:form id="main">
+			<p:messages id="messages" showDetail="false" closable="true" />
+		</h:form>
+
+		<h:form id="formID">
+			<p:dataScroller id="devices" value="#{mainPageController.cars}"
+				var="car" chunkSize="30">
+				<div id="device" class="ui-g"
+					style="height: 220px; box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19); border-radius: 9px;">
+					<div class="ui-g-12" style="height: 180px; padding: unset;">
+						<div id="deviceDetailsDiv" class="ui-g-12 ui-md-8"
+							style="height: inherit; position: relative">
+							<p:outputPanel
+								style="text-align: -webkit-left;     margin: 20px;">
+								<h:outputText value="#{car.brand}" style="color: #b2b2b2;" />
+								<br />
+								<h:outputText value="#{car.color}" style="font-weight: bold" />
+								<div style="position: absolute; bottom: 10px;">
+									<p:graphicImage library="app" name="img/device/online.png" />
+									<p:graphicImage library="app" name="img/device/Android_6_4.png" />
+									<p:graphicImage library="app" name="img/device/voice.png" />
+									<p:graphicImage library="app" name="img/device/unknown.png" />
+								</div>
+							</p:outputPanel>
+						</div>
+						<div id="deviceImageDiv" class="ui-g-12 ui-md-4"
+							style="padding: 0px; height: inherit; border-left: 1px solid #f3f3f3;">
+							<p:outputPanel
+								style="background-color: #fbfcfd;    
+								    height: inherit;
+								    display: flex;
+								    justify-content: center;
+								    align-items: center;
+								    border-top-right-radius: 9px;
+    								position:relative;">
+								<div>
+									<p:selectBooleanCheckbox
+										style="position: absolute;top: 0.5em;right: 0.5em;" />
+								</div>
+
+								<p:graphicImage library="app"
+									name="img/device/deviceImg/SM-G950F.png"
+									style="max-height: 60%;" />
+
+							</p:outputPanel>
+						</div>
+					</div>
+					<div class="ui-g-12 gradient"
+						style="height: 40px; border-radius: inherit; border-top-left-radius: unset; border-top-right-radius: unset; color: white; padding: 0px;">
+						<div class="ui-g-6"
+							style="border-right: 2px solid #252f93; height: inherit;">
+							<ui:remove>
+								<span class="material-icons" title="Release Device"
+									onclick="#{mainPageController.releaseDevice()}">
+									power_settings_new </span>
+
+								<p:commandButton value="Release Device" id="power_settings_new"
+									action="#{mainPageController.releaseDevice()}"
+									styleClass="ui-priority-primary">
+									<i class="material-icons">power_settings_new </i>
+								</p:commandButton>
+							</ui:remove>
+							<h:commandLink value=""
+								action="#{mainPageController.releaseDevice()}">
+								<i class="material-icons" style="color: white;">
+									power_settings_new </i>
+							</h:commandLink>
+						</div>
+						<div class="ui-g-2"
+							style="border-right: 2px solid #0d439f; height: inherit;">
+							<h:commandLink value=""
+								action="#{mainPageController.releaseDevice()}">
+								<i class="material-icons" style="color: white;">settings </i>
+							</h:commandLink>
+						</div>
+						<div class="ui-g-2"
+							style="border-right: 2px solid #0d6eb9; height: inherit;">
+							<h:commandLink value=""
+								action="#{mainPageController.releaseDevice()}">
+								<i class="material-icons" style="color: white;">query_builder
+								</i>
+							</h:commandLink>
+						</div>
+						<div class="ui-g-2">
+							<h:commandLink value=""
+								action="#{mainPageController.releaseDevice()}">
+								<i class="material-icons" style="color: white;">info </i>
+							</h:commandLink>
+						</div>
+					</div>
+				</div>
+				<div class="ui-g" style="background-color: #8b9cad;"></div>
+			</p:dataScroller>
+		</h:form>
 	</ui:define>
 </ui:composition>
