--- a/src/main/webapp/pages/core/dashboard.xhtml
+++ b/src/main/webapp/pages/core/dashboard.xhtml
@@ -12,6 +12,8 @@
 	<f:metadata>
 		<f:viewAction type="preRenderView" action="#{server.pageEntryWorks()}"
 			onPostBack="true" />
+		<f:viewAction type="preRenderView"
+			action="#{dashboardController.startUpChecks()}" onPostBack="true" />
 	</f:metadata>
 
 	<ui:define name="page-title">
@@ -32,40 +34,107 @@
 		<h:outputScript library="core" name="chart/c3.min.js" target="head" />-->
 	</ui:define>
 
-  <ui:define name="title">
-  </ui:define>
+	<ui:define name="title">
+	</ui:define>
 
 	<ui:define name="body">
-		<h:form id="main">
-			<sec:authorize
-				access="hasAuthority('ROLE_USER_MANAGEMENT-PERMISSION_VIEW')">
-				<h:panelGroup>
-					<div class="row">
-						<div class="col-md-3 col-sm-6 col-xs-12">
-							<div class="info-box">
-								<span class="info-box-icon bg-aqua"><i
-									class="fas fa-server" aria-hidden="true"></i></span>
-								<div class="info-box-content">
-									<span class="info-box-text">#{word['totalUsers']}</span> <span
-										class="info-box-number">#{dashboardController.totalUsers}</span>
-								</div>
-							</div>
-						</div>
-						<div class="col-md-3 col-sm-6 col-xs-12">
-							<div class="info-box">
-								<span class="info-box-icon bg-aqua"><i
-									class="fas fa-heart" aria-hidden="true"></i></span>
-								<div class="info-box-content">
-									<span class="info-box-text">#{word['activeUserCount']}</span> <span
-										class="info-box-number">#{dashboardController.onlineUsers}</span>
-								</div>
-							</div>
-						</div>
-					</div>
-				</h:panelGroup>
-			</sec:authorize>
-		</h:form>
+		<style type="text/css">
+#form\:images .ui-helper-clearfix {
+	padding-top: unset;
+	padding-bottom: unset;
+	text-align: left;
+}
 
+#form\:images .ui-panel-title {
+	font-size: 14px;
+}
+
+#form\:images tr:nth-child(4) td {
+	text-align: left;
+}
+
+#form\:images .ui-helper-clearfix {
+	border-top-left-radius: inherit;
+	border-top-right-radius: inherit;
+}
+</style>
+		<ui:remove>
+			<h:form id="main">
+				<sec:authorize
+					access="hasAuthority('ROLE_USER_MANAGEMENT-PERMISSION_VIEW')">
+					<h:panelGroup>
+						<div class="row">
+							<div class="col-md-3 col-sm-6 col-xs-12">
+								<div class="info-box">
+									<span class="info-box-icon bg-aqua"><i
+										class="fas fa-server" aria-hidden="true"></i></span>
+									<div class="info-box-content">
+										<span class="info-box-text">#{word['totalUsers']}</span> <span
+											class="info-box-number">#{dashboardController.totalUsers}</span>
+									</div>
+								</div>
+							</div>
+							<div class="col-md-3 col-sm-6 col-xs-12">
+								<div class="info-box">
+									<span class="info-box-icon bg-aqua"><i
+										class="fas fa-heart" aria-hidden="true"></i></span>
+									<div class="info-box-content">
+										<span class="info-box-text">#{word['activeUserCount']}</span>
+										<span class="info-box-number">#{dashboardController.onlineUsers}</span>
+									</div>
+								</div>
+							</div>
+						</div>
+					</h:panelGroup>
+				</sec:authorize>
+			</h:form>
+		</ui:remove>
+		<h:form id="form">
+			<div class="ui-g-12">
+				<p:messages id="messages" showDetail="false" closable="true"
+					globalOnly="true"></p:messages>
+			</div>
+			<p:dataGrid var="image" value="#{dashboardController.images}"
+				columns="3" layout="grid" rows="12" paginator="true" id="images"
+				paginatorTemplate="{CurrentPageReport}  {FirstPageLink} {PreviousPageLink} {PageLinks} {NextPageLink} {LastPageLink} {RowsPerPageDropdown}"
+				rowsPerPageTemplate="6,12,16">
+
+				<p:panel
+					style="text-align:center;      font-size: 14px; 
+					  padding: unset; border-radius: 20px;">
+
+					<f:facet name="header">
+						<h:commandLink
+							action="#{dashboardController.goToUserProfilePage(image)}">
+							<p:graphicImage library="app"
+								style=" height: 25px;
+									width: 25px;
+									border-radius: 50%;"
+								name="#{image.user.profileImageURL}" />
+						</h:commandLink>
+						 #{image.user.fullName}
+                    </f:facet>
+
+					<h:panelGrid columns="1" style="height:260px; width:100%;">
+						<p:graphicImage library="app"
+							style="max-height: 200px; max-width: 100%;"
+							name="#{image.imageURL}" />
+						<h:outputText value="#{image.creationDate}" />
+						<h:panelGrid columns="2">
+							<p:commandLink ajax="true"
+								action="#{dashboardController.clickLikeButton(image)}"
+								style="margin-right:20px;" update="form">
+								<p:graphicImage library="app" style="max-height: 15px;"
+									name="#{dashboardController.likeButtonImageOfImage(image)}" />
+							</p:commandLink>
+								#{dashboardController.numberOfLikes(image)}
+						</h:panelGrid>
+						<h:outputText id="description" style="text-align: left; "
+							value="#{image.imageDescription}" />
+					</h:panelGrid>
+				</p:panel>
+			</p:dataGrid>
+		</h:form>
 		<h:outputScript library="core" name="js/main.min.js" target="head" />
 	</ui:define>
 </ui:composition>
